[package]
name = "egui-remixicon"
version = "0.1.0"
edition = "2021"
description = "Remix Icon for egui"
license = "MIT OR Apache-2.0"
repository = "https://github.com/get200/egui-remixicon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.23", default-features = false }

[dev-dependencies]
eframe = "0.23"
