[package]
name = "egui-remixicon"
version = "0.33.1"
edition = "2021"
description = "Remix Icon for egui"
license = "MIT OR Apache-2.0"
repository = "https://github.com/get200/egui-remixicon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.33", default-features = false, optional = true }

[dev-dependencies]
eframe = "0.33"

[features]
default = ["egui"]
egui = ["dep:egui"]
